AI Trading Assistant
Added a Gemini API feature that transforms user description of what they want to achieve to the stock fields in our order entry system and automatically populates the data fields with the right inputs and order type according to user request, acting like an AI Trading Assistant. Also, I put Live prices back into stocks.

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=mysql+pymysql://root:Stonegate123%21@localhost:3306/order_entry_database
 ALPHA_VANTAGE_API_KEY=JGNOEPKLVDQ4P2CM
+GEMINI_API_KEY=AIzaSyCe5kA7utR7iVYHAKV3IPEe4bCrSP2HXR0
